--- a/recovery/root/init.recovery.mt6771.rc
+++ b/recovery/root/init.recovery.mt6771.rc
@@ -45,11 +45,11 @@ on init
 
     start hwservicemanager
     start servicemanager
-    start vendor.keymaster-3-0
+    start keymaster-3-0
 
 service hwservicemanager /sbin/hwservicemanager
     user root
-    group root readproc
+    group root
     disabled
     onrestart setprop hwservicemanager.ready false
     seclabel u:r:recovery:s0
@@ -60,9 +60,9 @@ service servicemanager /sbin/servicemanager
     disabled
     seclabel u:r:recovery:s0
 
-service vendor.keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service
+service keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service
     user root
-    group root drmrpc
+    group root
     disabled
     seclabel u:r:recovery:s0
 
