--- a/recovery/root/init.recovery.mt6771.rc
+++ b/recovery/root/init.recovery.mt6771.rc
@@ -36,65 +36,50 @@ on fs
     write /sys/devices/platform/odm/odm:oppo_charger/power_supply/usb/otg_switch 1
     export ANDROID_ROOT /system_root
 
-    mkdir /data/app/mcRegistry 0770 system system
-    mkdir /data/app/mcRegistry/TbStorage 0770 system system
-
 on init
 
     mkdir /vendor/lib64 0700 root root
     mkdir /vendor/lib64/hw 0700 root root
     symlink /vendor/manifest.xml /system_root/system/manifest.xml
-    symlink /sbin/keystore.mt6771.so /vendor/lib64/hw/keystore.mt6771.so
     symlink /sbin/mcRegistry /vendor/app/mcRegistry
 
-    start vendor.keymaster-3-0
     start hwservicemanager
-
-on property:recovery.reload.persist=trigger_reload_persist
-    load_persist_props
-
-on property:enable.fbe.service=0
-    stop hal_cryptoeng_oppo
-    stop mobicore
+    setprop crypto.ready 1
 
 service hwservicemanager /sbin/hwservicemanager
+    user root
+    group root
     disabled
     onrestart setprop hwservicemanager.ready false
-    writepid /dev/cpuset/system-background/tasks
     seclabel u:r:recovery:s0
-
-service vendor.keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service
-    class early_hal
-    user system
-    group system drmrpc
-    seclabel u:r:recovery:s0
-
-on property:recovery.fde.service=trigger_restart_service
-    restart hwservicemanager
-    restart keymaster-3-0
 
 service servicemanager /sbin/servicemanager
-    class core animation
-    user system
-    group system readproc
-    critical
-    onrestart restart healthd
-    onrestart restart zygote
-    onrestart restart audioserver
-    onrestart restart media
-    onrestart restart surfaceflinger
-    onrestart restart inputflinger
-    onrestart restart drm
-    onrestart restart cameraserver
-    onrestart restart keystore
-    onrestart restart gatekeeperd
-    writepid /dev/cpuset/system-background/tasks
-    shutdown critical
+    user root
+    group root readproc
+    disabled
     seclabel u:r:recovery:s0
 
-service vndservicemanager /vendor/bin/vndservicemanager /dev/vndbinder
-    writepid /dev/cpuset/system-background/tasks
+service gatekeeper-1-0 /sbin/android.hardware.gatekeeper@1.0-service
+    user root
+    group root
+    disabled
     seclabel u:r:recovery:s0
+
+service keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+on property:crypto.ready=0
+    stop keymaster-3-0
+    stop gatekeeper-1-0
+    stop servicemanager
+
+on property:vendor.sys.listeners.registered=true
+    start keymaster-3-0
+    start gatekeeper-1-0
+    start servicemanager
 
 on property:ro.mtk_emmc_support=1
     # Support A/B feature for emmc boot region
