--- a/recovery/root/init.recovery.mt6771.rc
+++ b/recovery/root/init.recovery.mt6771.rc
@@ -7,6 +7,7 @@ on fs
 
 on init
     start hwservicemanager
+    resetprop "ro.crypto.type" "block"
     setprop crypto.ready 1
 
 service hwservicemanager /sbin/hwservicemanager
